docs: add reponse examples
