# docs/swagger.json
@@ -175,10 +175,43 @@
                                                             "$ref": "#/definitions/models.Admin"
                                                         },
                                                         "student_profile": {
-                                                            "$ref": "#/definitions/models.Student"
+                                                            "allOf": [
+                                                                {
+                                                                    "$ref": "#/definitions/models.Student"
+                                                                },
+                                                                {
+                                                                    "type": "object",
+                                                                    "properties": {
+                                                                        "class": {
+                                                                            "$ref": "#/definitions/models.Class"
+                                                                        },
+                                                                        "parents": {
+                                                                            "type": "array",
+                                                                            "items": {
+                                                                                "$ref": "#/definitions/models.Parent"
+                                                                            }
+                                                                        }
+                                                                    }
+                                                                }
+                                                            ]
                                                         },
                                                         "teacher_profile": {
-                                                            "$ref": "#/definitions/models.Teacher"
+                                                            "allOf": [
+                                                                {
+                                                                    "$ref": "#/definitions/models.Teacher"
+                                                                },
+                                                                {
+                                                                    "type": "object",
+                                                                    "properties": {
+                                                                        "subjects": {
+                                                                            "type": "array",
+                                                                            "items": {
+                                                                                "$ref": "#/definitions/models.Subject"
+                                                                            }
+                                                                        }
+                                                                    }
+                                                                }
+                                                            ]
                                                         }
                                                     }
                                                 }
@@ -581,8 +614,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "allOf": [
                                 {
@@ -1039,7 +1072,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/models.ID"
+                                            "$ref": "#/definitions/models.Id"
                                         }
                                     }
                                 }
@@ -1073,22 +1106,28 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 },
                 "employee_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "DEV001"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "479b5b5f-81b1-4669-91a5-b5bf69e597c6"
                 },
                 "joined_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 },
                 "staff_role": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "developer"
                 },
                 "updated_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 }
             }
         },
@@ -1096,27 +1135,29 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
-                },
-                "form_teacher": {
-                    "$ref": "#/definitions/models.Teacher"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "479b5b5f-81b1-4669-91a5-b5bf69e597c6"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "10 TJKT 3"
                 },
                 "updated_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 }
             }
         },
-        "models.ID": {
+        "models.Id": {
             "type": "object",
             "properties": {
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "479b5b5f-81b1-4669-91a5-b5bf69e597c6"
                 }
             }
         },
@@ -1124,13 +1165,16 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "chestaardi4@gmail.com"
                 },
                 "full_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Chesta Ardiona"
                 },
                 "gender": {
                     "description": "\"male\", \"female\"",
@@ -1141,14 +1185,17 @@
                     ]
                 },
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "479b5b5f-81b1-4669-91a5-b5bf69e597c6"
                 },
                 "phone": {
                     "description": "phone number",
-                    "type": "string"
+                    "type": "string",
+                    "example": "+6281234567890"
                 },
                 "updated_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 }
             }
         },
@@ -1163,22 +1210,27 @@
                     }
                 },
                 "created_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 },
                 "description": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Full access to manage role of users"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "479b5b5f-81b1-4669-91a5-b5bf69e597c6"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "role full manage"
                 },
                 "resource": {
                     "$ref": "#/definitions/models.PermissionResource"
                 },
                 "updated_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 }
             }
         },
@@ -1211,26 +1263,21 @@
         "models.Student": {
             "type": "object",
             "properties": {
-                "class": {
-                    "$ref": "#/definitions/models.Class"
-                },
                 "created_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "479b5b5f-81b1-4669-91a5-b5bf69e597c6"
                 },
                 "nisn": {
-                    "type": "string"
-                },
-                "parents": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Parent"
-                    }
+                    "type": "string",
+                    "example": "0091913711"
                 },
                 "updated_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 }
             }
         },
@@ -1238,16 +1285,20 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "479b5b5f-81b1-4669-91a5-b5bf69e597c6"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "informatika"
                 },
                 "updated_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 }
             }
         },
@@ -1255,28 +1306,28 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 },
                 "employee_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "TEA001"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "479b5b5f-81b1-4669-91a5-b5bf69e597c6"
                 },
                 "joined_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 },
                 "nuptk": {
-                    "type": "string"
-                },
-                "subjects": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Subject"
-                    }
+                    "type": "string",
+                    "example": "1234567890123456"
                 },
                 "updated_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 }
             }
         },
@@ -1284,17 +1335,21 @@
             "type": "object",
             "properties": {
                 "archived_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 },
                 "created_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 },
                 "email": {
                     "description": "auth username",
-                    "type": "string"
+                    "type": "string",
+                    "example": "chestaardi4@gmail.com"
                 },
                 "full_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Chesta Ardiona"
                 },
                 "gender": {
                     "description": "\"male\", \"female\"",
@@ -1305,11 +1360,13 @@
                     ]
                 },
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "479b5b5f-81b1-4669-91a5-b5bf69e597c6"
                 },
                 "phone": {
                     "description": "phone number",
-                    "type": "string"
+                    "type": "string",
+                    "example": "+6281234567890"
                 },
                 "role": {
                     "description": "\"student\", \"teacher\", \"admin\", \"unsetted\"",
@@ -1320,7 +1377,8 @@
                     ]
                 },
                 "updated_at": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2006-01-02T15:04:05Z07:00"
                 }
             }
         },
